header info fixed

--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
                   data-splitin="none" 
                   data-splitout="none" 
                   data-responsive_offset="on"
-                  style="z-index: 7; white-space: nowrap; font-weight:800;">Sponsor a Child 
+                  style="z-index: 7; white-space: nowrap; font-weight:800;">Health Clusters 
                 </div>
 
                 <!-- LAYER NR. 3 -->
@@ -266,7 +266,7 @@
                   data-splitin="none" 
                   data-splitout="none" 
                   data-responsive_offset="on"
-                  style="z-index: 5; white-space: nowrap; letter-spacing:0px; font-weight:400;">Every day we bring hope to millions of children in the world's<br>  hardest places as a sign of God's unconditional love.
+                  style="z-index: 5; white-space: nowrap; letter-spacing:0px; font-weight:400;">Join our struggle to bring health social and mental outreach <br> to thousands of people in Uganda..
                 </div>
 
                 <!-- LAYER NR. 4 -->
@@ -343,7 +343,7 @@
                   data-splitin="none" 
                   data-splitout="none" 
                   data-responsive_offset="on"
-                  style="z-index: 7; white-space: nowrap; font-weight:800; border-radius:45px;">Save A Child 
+                  style="z-index: 7; white-space: nowrap; font-weight:800; border-radius:45px;">Wealth
                 </div>
 
                 <!-- LAYER NR. 3 -->
@@ -369,7 +369,7 @@
                   data-splitin="none" 
                   data-splitout="none" 
                   data-responsive_offset="on"
-                  style="z-index: 5; white-space: nowrap; letter-spacing:0px; font-weight:400;">Every day we bring hope to millions of children in the world's<br>  hardest places as a sign of God's unconditional love.
+                  style="z-index: 5; white-space: nowrap; letter-spacing:0px; font-weight:400;">Every day we seek to improve the welfare of Africans <br> by improving the wealth generating sources.
                 </div>
 
                 <!-- LAYER NR. 4 -->
@@ -446,7 +446,7 @@
                   data-splitin="none" 
                   data-splitout="none" 
                   data-responsive_offset="on"
-                  style="z-index: 7; white-space: nowrap; font-weight:800;">Sponsor a Child 
+                  style="z-index: 7; white-space: nowrap; font-weight:800;">Education 
                 </div>
 
                 <!-- LAYER NR. 3 -->
@@ -472,7 +472,7 @@
                   data-splitin="none" 
                   data-splitout="none" 
                   data-responsive_offset="on"
-                  style="z-index: 5; white-space: nowrap; letter-spacing:0px; font-weight:400;">Every day we bring hope to millions of children in the world's<br>  hardest places as a sign of God's unconditional love.
+                  style="z-index: 5; white-space: nowrap; letter-spacing:0px; font-weight:400;">We try our best to secure a education<br>  for the children.
                 </div>
 
                 <!-- LAYER NR. 4 -->
