--- a/cause-wealth.html
+++ b/cause-wealth.html
@@ -67,9 +67,9 @@
   <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
 <![endif]-->
 </head>
-<body class="has-side-pane side-panel-rigt fullwidth-page">
+<body class="has-side-panel side-panel-rigt fullwidth-page">
 <div class="body-overlay"></div>
-  
+
   <!-- Header -->
   <header class="header">
     <div class="header-top bg-deep sm-text-center">
@@ -115,12 +115,12 @@
               </li>
               <li><a href="#">About</a>
                 <ul class="dropdown">
-                  <li class="active"><a href="about.html">Who we are</a></li>
+                  <li><a href="about.html">Who we are</a></li>
                   <li><a href="how-works.html">How Mindset Initiative Works</a></li>
                   <li><a href="mission.html">Our Mission, Vision and Core Values</a></li>
                 </ul>
               </li>
-              <li><a href="causes.html">Causes</a>
+              <li class="active"><a href="causes.html">Causes</a>
               <li><a href="#">Volunteer</a>
                 <ul class="dropdown">
                   <li><a href="events.html">Events</a></li>
@@ -137,19 +137,18 @@
       </div>
     </div>
   </header>
-
-
+  
   <!-- Start main-content -->
  
   <div class="main-content">
     <!-- Section: inner-header -->
-    <section class="inner-header divider layer-overlay overlay-dark" data-bg-img="images/blur_bg.jpg">
+    <section class="inner-header divider layer-overlay overlay-dark" data-bg-img="images/0/wealth.jpg">
       <div class="container pt-30 pb-30">
         <!-- Section Content -->
         <div class="section-content text-center">
-          <div class="row"> 
+          <div class="row">
             <div class="col-md-6 col-md-offset-3 text-center">
-              <h3 class="text-theme-colored font-36">Outreach Programs</h3>
+              <h2 class="text-theme-colored font-36">Wealth and resources </h2>
               <ol class="breadcrumb text-center mt-10 white">
                 <li><a href="#">Home</a></li>
                 <li><a href="#">Pages</a></li>
@@ -158,113 +157,72 @@
             </div>
           </div>
         </div>
-      </div>
+      </div>      
     </section>
 
-    <!-- Section: Upcoming Event -->
+    <!-- Divider: Partners & Donors -->
     <section>
       <div class="container">
-        <div class="row mtli-row-clearfix">
-          <div class="col-sm-6 col-md-3 col-lg-3">
-            <div class="causes bg-lighter box-hover-effect effect1 maxwidth500 mb-sm-30">
+        <div class="row">
+          <div class="col-sm-12 col-md-9">
+            <div class="upcoming-events media bg-light p-15 pb-60 mb-50 mb-sm-30">
               <div class="thumb">
-                <img class="img-fullwidth" alt="" src="images/0/wealth.jpg">
+                <img class="img-fullwidth" src="images/0/wealth.jpg" alt="...">
               </div>
-              <div class="progress-item mt-0">
-                <!--<div class="progress mb-0">
-                  <div class="progress-bar" data-percent="84"></div>
-                </div>-->
+              <div class="row">
+                <div class="col p-15">
+                  <div class="mt-30">
+                    <h3 class="media-heading text-uppercase font-weight-500 text-theme-colored">Wealth and resources </h3>
+                    <p class="">African people have been exploited in benefiting from their own resources like minerals, land, agriculture etc. hence a lot of poverty on the communities.</p>
+                  </div>
+                </div>
               </div>
-              <div class="causes-details clearfix border-bottom p-15 pt-10">
-                <h5><a href="cause-wealth.html">Wealth and resources </a></h5>
-                <p>African people have been exploited in benefiting from their own resources like minerals, land, agriculture...</p>
-                <!-- <ul class="list-inline clearfix mt-20">
-                  <li class="pull-left pr-0">Raised: $1890</li>
-                  <li class="text-theme-colored pull-right pr-0">Goal: $2500</li>
-                </ul> -->
-                <div class="mt-10">
-                 <a class="btn btn-dark btn-theme-colored btn-flat btn-sm pull-left mt-10" href="cause-wealth.html">Read More</a>
-                 <!-- <div class="pull-right mt-15"><i class="fa fa-heart-o text-theme-colored"></i> 89 Donors</div> -->
+              <div class="event-details">
+                <p class="mb-10">Mindset initiative advocates for fight against poverty and help communities to benefit from there resources through programs like.</p>
+                  <h5 class="media-heading font-weight-500">Community stock ownership program  </h5>
+                  <p class="">This program benefits communities in having stock shares with companies operating within their area using the resources of that particular community this involve community engagements with companies, policy maker’s engagements on community stock ownership.</p>
+                  <h5 class="media-heading font-weight-500">Local food network systems </h5>
+                <p class="">Agriculture as the back bone for Africa, mindset initiative supports this philosophy for every vulnerable person to benefit therefore the initiative has developed local food network systems, these networks link farmers to the final consumer through local food hubs that involves community supported agriculture, community gardens, buying and selling clubs</p>
+              </div>
+            </div>
+          </div>
+                       
+          <div class="col-sm-12 col-md-3">
+            <div class="sidebar sidebar-right mt-sm-30">
+              <div class="widget">
+                <h5 class="widget-title line-bottom">Causes</h5>
+                <div class="categories">
+                  <ul class="list list-border angle-double-right">
+                    <li class="active"><a href="cause-leadership.html">Leadership</a></li>
+                    <li><a href="cause-healthClusters.html">Regional Health Clusters</a></li>
+                    <li><a href="cause-culturalTraditional.html">Cultural and Traditional</a></li>
+                  </ul>
                 </div>
               </div>
             </div>
           </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-            <div class="causes bg-lighter box-hover-effect effect1 maxwidth500 mb-sm-30">
-              <div class="thumb">
-                <img class="img-fullwidth" alt="" src="images/0/ask-for-alms-1742502_1920.jpg">
-              </div>
-              <div class="progress-item mt-0">
-                <!--<div class="progress mb-0">
-                  <div class="progress-bar" data-percent="84"></div>
-                </div>-->
-              </div>
-              <div class="causes-details clearfix border-bottom p-15 pt-10">
-                <h5><a href="cause-healthClusters.html">Regional health clusters </a></h5>
-                <p>Regional health clusters main focus under the initiative is to provide...</p>
-                <!-- <ul class="list-inline clearfix mt-20">
-                  <li class="pull-left pr-0">Raised: $1890</li>
-                  <li class="text-theme-colored pull-right pr-0">Goal: $2500</li>
-                </ul> -->
-                <div class="mt-10">
-                 <a class="btn btn-dark btn-theme-colored btn-flat btn-sm pull-left mt-10" href="cause-healthClusters.html">Read More</a>
-                 <!-- <div class="pull-right mt-15"><i class="fa fa-heart-o text-theme-colored"></i> 89 Donors</div> -->
-                </div>
+          
+    <!-- divider: Emergency Services -->
+    <section class="divider parallax layer-overlay overlay-deep" data-stellar-background-ratio="0.2"  data-bg-img="images/blur_bg.jpg">
+        <div class="container">
+          <div class="section-content text-center">
+            <div class="row">
+              <div class="col-md-12">
+                <h3 class="mt-0">How you can help us</h3>
+                <h2>Just reachout 
+                   <!-- <span class="text-theme-colored">(01) 234 5678</span>  -->
+                   and <span class="text-theme-colored">make a donation</span> </h2>
               </div>
             </div>
           </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-            <div class="causes bg-lighter box-hover-effect effect1 maxwidth500 mb-sm-30">
-              <div class="thumb">
-                <img class="img-fullwidth" alt="" src="images/0/lead.jpg" style="height: auto; width: 100%;">
-              </div>
-              <div class="progress-item mt-0">
-                <!--<div class="progress mb-0">
-                  <div class="progress-bar" data-percent="84"></div>
-                </div>-->
-              </div>
-              <div class="causes-details clearfix border-bottom p-15 pt-10">
-                <h5><a href="cause-leadership.html">Leadership</a></h5>
-                <p>Leadership has remained the greatest cause of conflicts on the continent in the end giving birth to poor...</p>
-                <!-- <ul class="list-inline clearfix mt-20">
-                  <li class="pull-left pr-0">Raised: $1890</li>
-                  <li class="text-theme-colored pull-right pr-0">Goal: $2500</li>
-                </ul> -->
-                <div class="mt-10">
-                 <a class="btn btn-dark btn-theme-colored btn-flat btn-sm pull-left mt-10" href="cause-leadership.html">Read More</a>
-                 <!-- <div class="pull-right mt-15"><i class="fa fa-heart-o text-theme-colored"></i> 89 Donors</div> -->
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-            <div class="causes bg-lighter box-hover-effect effect1 maxwidth500 mb-sm-30">
-              <div class="thumb">
-                <img class="img-fullwidth" alt="" src="images/0/trad.jpg">
-              </div>
-              <div class="progress-item mt-0">
-                <!--<div class="progress mb-0">
-                  <div class="progress-bar" data-percent="84"></div>
-                </div>-->
-              </div>
-              <div class="causes-details clearfix border-bottom p-15 pt-10">
-                <h5><a href="cause-culturalTraditional.html">Cultural and traditional</a></h5>
-                <p>African culture have been lost in the wake of modernization, culture and tradition has been neglected...</p>
-                <!-- <ul class="list-inline clearfix mt-20">
-                  <li class="pull-left pr-0">Raised: $1890</li>
-                  <li class="text-theme-colored pull-right pr-0">Goal: $2500</li>
-                </ul> -->
-                <div class="mt-10">
-                 <a class="btn btn-dark btn-theme-colored btn-flat btn-sm pull-left mt-10" href="cause-culturalTraditional.html">Read More</a>
-                 <!-- <div class="pull-right mt-15"><i class="fa fa-heart-o text-theme-colored"></i> 89 Donors</div> -->
-                </div>
-              </div>
-            </div>
-          </div>
+        </div>      
+      </section>
+  
         </div>
       </div>
     </section>
   </div>
+  
   
   <!-- end main-content -->
   
@@ -274,8 +232,8 @@
       <div class="row multi-row-clearfix">
         <div class="col-sm-6 col-md-3">
           <div class="widget dark"> <img alt="" src="images/FINAL CORRECTED LOGO.png">
-            <p class="font-12 mt-10 mb-10">Mindset initiative is to have a common positive ideology as Africans towards Africa to the solutions of saving our generational minds and create a renewed Africa.</p>
-            <!-- <a class="btn btn-default btn-transparent btn-xs btn-flat mt-5" href="#">Read more</a> -->
+            <p class="font-12 mt-10 mb-10">Lorem ipsum dolor sit amet consectetur adipisicing elit. Et quam iste explicabo cupiditate sapiente, delectus at? Aliquam inventore, vero eos animi quae corporis soluta incidunt. Fugit quia laboriosam provident tenetur.</p>
+            <a class="btn btn-default btn-transparent btn-xs btn-flat mt-5" href="#">Read more</a>
             <ul class="styled-icons icon-sm icon-bordered icon-circled clearfix mt-20">
               <li><a href="#"><i class="fa fa-facebook"></i></a></li>
               <li><a href="#"><i class="fa fa-twitter"></i></a></li>
@@ -290,11 +248,11 @@
             <h5 class="widget-title line-bottom">Pages</h5>
             <ul class="list-border list theme-colored angle-double-right">
               <li><a href="index.html">Home</a></li>
-              <li><a href="about.html">About</a></li>
-              <li><a href="events.html">Events</a></li>
-              <li><a href="mission.html">Our Mission</a></li>
-              <li><a href="how-works.html">How it works</a></li>
+              <li><a href="about.html">Who we are</a></li>
+              <li><a href="blog.html">Publications</a></li>
               <li><a href="causes.html">Causes</a></li>
+              <li><a href="events.html">Events</a></li>
+              <li><a href="how-works.html">How Mindset Initiative Works</a></li>
             </ul>
           </div>
         </div>
@@ -302,12 +260,12 @@
           <div class="widget dark">
             <h5 class="widget-title line-bottom">Quick Links</h5>
             <ul class="list-border list theme-colored angle-double-right">
-              <li><a href="join-us.html">Join Us</a></li>
-              <li><a href="#">Publications</a></li>
-              <li><a href="#">Make a donation</a></li>
-              <li><a href="contact.html">Contact Us</a></li>
+              <li><a href="#">Contact Us</a></li>
               <li><a href="#">Privacy Policy</a></li>
+              <li><a href="#">Donor Privacy Policy</a></li>
+              <li><a href="#">Disclaimer</a></li>
               <li><a href="#">Terms of Use</a></li>
+              <li><a href="#">Copyright Notice</a></li>
             </ul>
           </div>
         </div>
@@ -315,7 +273,7 @@
           <div class="widget dark">
             <h5 class="widget-title line-bottom">Quick Contact</h5>
             <ul class="list-border">
-              <li><a href="#">+256 779 784 511</a></li>
+              <li><a href="tel:+256779784511">+256 779 784 511</a></li>
               <li><a href="#">africamindsetinitiative@gmail.com </a></li>
               <li><a href="#" class="lineheight-20">Plot No. 81 Jinja Road</a></li>
             </ul>
