--- a/index.html
+++ b/index.html
@@ -639,7 +639,7 @@
               <div class="title-icon">
                 <i class="flaticon-charity-hand-holding-a-heart"></i>
               </div>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem autem<br> voluptatem obcaecati!</p>
+              <!-- <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem autem<br> voluptatem obcaecati!</p> -->
             </div>
           </div>
         </div>
@@ -655,14 +655,14 @@
                 </div>-->
               </div>
               <div class="causes-details clearfix border-bottom p-15 pt-10">
-                <h5><a href="#">Education Outreach</a></h5>
-                <p>Lorem ipsum dolor sit amet, consect adipisicing elit. Praesent quos sit.</p>
+                <h5><a href="#">Wealth and resources </a></h5>
+                <p>African people have been exploited in benefiting from their own resources like minerals, land, agriculture...</p>
                 <!-- <ul class="list-inline clearfix mt-20">
                   <li class="pull-left pr-0">Raised: $1890</li>
                   <li class="text-theme-colored pull-right pr-0">Goal: $2500</li>
                 </ul> -->
                 <div class="mt-10">
-                 <a class="btn btn-dark btn-theme-colored btn-flat btn-sm pull-left mt-10" href="#">Donate</a>
+                 <a class="btn btn-dark btn-theme-colored btn-flat btn-sm pull-left mt-10" href="#">Read More</a>
                  <div class="pull-right mt-15"><i class="fa fa-heart-o text-theme-colored"></i> 89 Donors</div>
                 </div>
               </div>
@@ -679,14 +679,14 @@
                 </div>-->
               </div>
               <div class="causes-details clearfix border-bottom p-15 pt-10">
-                <h5><a href="#">Sports Fostering</a></h5>
-                <p>Lorem ipsum dolor sit amet, consect adipisicing elit. Praesent quos sit.</p>
+                <h5><a href="#">Regional health clusters </a></h5>
+                <p>Regional health clusters main focus under the initiative is to provide...</p>
                 <!-- <ul class="list-inline clearfix mt-20">
                   <li class="pull-left pr-0">Raised: $1890</li>
                   <li class="text-theme-colored pull-right pr-0">Goal: $2500</li>
                 </ul> -->
                 <div class="mt-10">
-                 <a class="btn btn-dark btn-theme-colored btn-flat btn-sm pull-left mt-10" href="#">Donate</a>
+                 <a class="btn btn-dark btn-theme-colored btn-flat btn-sm pull-left mt-10" href="#">Read More</a>
                  <div class="pull-right mt-15"><i class="fa fa-heart-o text-theme-colored"></i> 89 Donors</div>
                 </div>
               </div>
@@ -703,14 +703,14 @@
                 </div>-->
               </div>
               <div class="causes-details clearfix border-bottom p-15 pt-10">
-                <h5><a href="#">Hands-on Training</a></h5>
-                <p>Lorem ipsum dolor sit amet, consect adipisicing elit. Praesent quos sit.</p>
+                <h5><a href="#">Leadership</a></h5>
+                <p>Leadership has remained the greatest cause of conflicts on the continent in the end giving birth to poor...</p>
                 <!-- <ul class="list-inline clearfix mt-20">
                   <li class="pull-left pr-0">Raised: $1890</li>
                   <li class="text-theme-colored pull-right pr-0">Goal: $2500</li>
                 </ul> -->
                 <div class="mt-10">
-                 <a class="btn btn-dark btn-theme-colored btn-flat btn-sm pull-left mt-10" href="#">Donate</a>
+                 <a class="btn btn-dark btn-theme-colored btn-flat btn-sm pull-left mt-10" href="#">Read More</a>
                  <div class="pull-right mt-15"><i class="fa fa-heart-o text-theme-colored"></i> 89 Donors</div>
                 </div>
               </div>
@@ -727,14 +727,14 @@
                 </div>-->
               </div>
               <div class="causes-details clearfix border-bottom p-15 pt-10">
-                <h5><a href="#">Eldery Support</a></h5>
-                <p>Lorem ipsum dolor sit amet, consect adipisicing elit. Praesent quos sit.</p>
+                <h5><a href="#">Cultural and traditional</a></h5>
+                <p>African culture have been lost in the wake of modernization, culture and tradition has been neglected...</p>
                 <!-- <ul class="list-inline clearfix mt-20">
                   <li class="pull-left pr-0">Raised: $1890</li>
                   <li class="text-theme-colored pull-right pr-0">Goal: $2500</li>
                 </ul> -->
                 <div class="mt-10">
-                 <a class="btn btn-dark btn-theme-colored btn-flat btn-sm pull-left mt-10" href="#">Donate</a>
+                 <a class="btn btn-dark btn-theme-colored btn-flat btn-sm pull-left mt-10" href="#">Read More</a>
                  <div class="pull-right mt-15"><i class="fa fa-heart-o text-theme-colored"></i> 89 Donors</div>
                 </div>
               </div>
@@ -1003,7 +1003,7 @@
     <section class="divider parallax layer-overlay overlay-light" data-stellar-background-ratio="0.2" data-bg-img="images/0/students-377789_1280.jpg">
       <div class="container pt-0 pb-0">
         <div class="row equal-height">
-          <div class="col-md-7">
+          <div class="col-md-6">
             <div class="display-table-parent pr-90 pl-90">
               <div class="display-table">
                 <div class="display-table-cell">
@@ -1068,18 +1068,29 @@
               </div>
             </div>
           </div>
-          <div class="col-md-5 bg-light-transparent">
+          <div class="col-md-6 bg-light-transparent">
             <div class="pt-50 pb-50 pl-20 pr-20">
-              <h4 class="line-bottom text-uppercase mt-0">Our Donors Say</h4>
+              <h4 class="line-bottom text-uppercase mt-0">Our Partners</h4>
               <div class="testimonial-carousel owl-nav-top">
                 <div class="item">
                   <div class="testimonial-wrapper text-center">
-                    <div class="thumb"><img class="img-circle" alt="" src="images/0/2.jpg"></div>
+                    <div class="thumb"><img class="img-circle" alt="" src="images/0/partners/frank-kassongo.png"></div>
                     <div class="content pt-10">
-                      <p>It is really a life changing moment for anyone who reaches out and sees the works that Mindset initiative is doing for the people in small viallges of Uganda</p>
-                      <i class="fa fa-quote-right font-36 mt-10 text-gray-lightgray"></i>
-                      <h5 class="author text-theme-colored mb-0">Ann Reeves</h5>
-                      <h6 class="title text-gray mt-0 mb-15">Donor</h6>
+                      <p>Frank Kassongo, philosophy (PhD) in development studies at University of Western Cape, researcher in public policy analysis. Kassongo believes in jobs creation as such he started a business that his employing other young graduates, and his looking forward to open other branches in various cities across Africa. He has broad knowledge of strategic management, stakeholder engagement (internal and external stakeholders), research development, strategic planning and innovative thinking. In 2020 he started an organization called Informed Youth of Africa (IYA) with the aim of bringing together selfless and dedicated young leaders who come from the different regions within the African continent that work in unity to realize the vision of the African Union (AU) of a United Africa and to promote the African Union agenda and formalizing Swahili as the main communicative language.</p>
+                      <!-- <i class="fa fa-quote-right font-36 mt-10 text-gray-lightgray"></i> -->
+                      <h5 class="author text-theme-colored mb-0">Frank Kassongo</h5>
+                      <h6 class="title text-gray mt-0 mb-15"> Philosophy (PhD)</h6>
+                    </div>
+                  </div>
+                </div>
+                <div class="item">
+                  <div class="testimonial-wrapper text-center">
+                    <div class="thumb"><img class="img-circle" alt="" src="images/0/partners/iya.png"></div>
+                    <div class="content pt-10">
+                      <p> (IYA)  is  a  pan-African  platform  steered  by  African  youth  for  the  betterment  and   the  well-­being  of  African  citizens.  The vision  is to  bring  together  selfless  and  dedicated  young  leaders  who   come  from  the  different  regions  within  the  African  continent  that  work  in  unity  to  realize  the  vision  of  the   African  Union  (AU)  of  a  United  Africa  and  to  promote  the  African  Union  agenda  and  formalizing  Swahili  as   the  main  communicative  language.  IYA  is  built  with  the  mission  of  connecting  African  youth  to  come   together  and  rewrite  the  African  narrative  using  African  voices</p>
+                      <!-- <i class="fa fa-quote-right font-36 mt-10 text-gray-lightgray"></i> -->
+                      <h5 class="author text-theme-colored mb-0">Informed Youth Africa (IYA)</h5>
+                      <h6 class="title text-gray mt-0 mb-15"> Organisation</h6>
                     </div>
                   </div>
                 </div>
