small time error fix

--- a/cause-culturalTraditional.html
+++ b/cause-culturalTraditional.html
@@ -167,7 +167,7 @@
           <div class="col-sm-12 col-md-9">
             <div class="upcoming-events media bg-light p-15 pb-60 mb-50 mb-sm-30">
               <div class="thumb">
-                <img class="img-fullwidth" src="images/0/trad.jpgx" alt="...">
+                <img class="img-fullwidth" src="images/0/trad.jpg" alt="...">
               </div>
               <div class="row">
                 <div class="col p-15">
