--- a/index.html
+++ b/index.html
@@ -647,7 +647,7 @@
           <div class="col-sm-6 col-md-3 col-lg-3">
             <div class="causes bg-lighter box-hover-effect effect1 maxwidth500 mb-sm-30">
               <div class="thumb">
-                <img class="img-fullwidth" alt="" src="images/0/children-1054858_1920.jpg">
+                <img class="img-fullwidth" alt="" src="images/0/wealth.jpg">
               </div>
               <div class="progress-item mt-0">
                 <!--<div class="progress mb-0">
@@ -662,56 +662,8 @@
                   <li class="text-theme-colored pull-right pr-0">Goal: $2500</li>
                 </ul> -->
                 <div class="mt-10">
-                 <a class="btn btn-dark btn-theme-colored btn-flat btn-sm pull-left mt-10" href="#">Read More</a>
-                 <div class="pull-right mt-15"><i class="fa fa-heart-o text-theme-colored"></i> 89 Donors</div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-            <div class="causes bg-lighter box-hover-effect effect1 maxwidth500 mb-sm-30">
-              <div class="thumb">
-                <img class="img-fullwidth" alt="" src="images/0/soccer-434343_1920.jpg">
-              </div>
-              <div class="progress-item mt-0">
-                <!--<div class="progress mb-0">
-                  <div class="progress-bar" data-percent="84"></div>
-                </div>-->
-              </div>
-              <div class="causes-details clearfix border-bottom p-15 pt-10">
-                <h5><a href="#">Regional health clusters </a></h5>
-                <p>Regional health clusters main focus under the initiative is to provide...</p>
-                <!-- <ul class="list-inline clearfix mt-20">
-                  <li class="pull-left pr-0">Raised: $1890</li>
-                  <li class="text-theme-colored pull-right pr-0">Goal: $2500</li>
-                </ul> -->
-                <div class="mt-10">
-                 <a class="btn btn-dark btn-theme-colored btn-flat btn-sm pull-left mt-10" href="#">Read More</a>
-                 <div class="pull-right mt-15"><i class="fa fa-heart-o text-theme-colored"></i> 89 Donors</div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-            <div class="causes bg-lighter box-hover-effect effect1 maxwidth500 mb-sm-30">
-              <div class="thumb">
-                <img class="img-fullwidth" alt="" src="images/0/angle-grinder-429757_1920.jpg" style="height: auto; width: 100%;">
-              </div>
-              <div class="progress-item mt-0">
-                <!--<div class="progress mb-0">
-                  <div class="progress-bar" data-percent="84"></div>
-                </div>-->
-              </div>
-              <div class="causes-details clearfix border-bottom p-15 pt-10">
-                <h5><a href="#">Leadership</a></h5>
-                <p>Leadership has remained the greatest cause of conflicts on the continent in the end giving birth to poor...</p>
-                <!-- <ul class="list-inline clearfix mt-20">
-                  <li class="pull-left pr-0">Raised: $1890</li>
-                  <li class="text-theme-colored pull-right pr-0">Goal: $2500</li>
-                </ul> -->
-                <div class="mt-10">
-                 <a class="btn btn-dark btn-theme-colored btn-flat btn-sm pull-left mt-10" href="#">Read More</a>
-                 <div class="pull-right mt-15"><i class="fa fa-heart-o text-theme-colored"></i> 89 Donors</div>
+                 <a class="btn btn-dark btn-theme-colored btn-flat btn-sm pull-left mt-10" href="cause-wealth.html">Read More</a>
+                 <!-- <div class="pull-right mt-15"><i class="fa fa-heart-o text-theme-colored"></i> 89 Donors</div> -->
                 </div>
               </div>
             </div>
@@ -727,6 +679,54 @@
                 </div>-->
               </div>
               <div class="causes-details clearfix border-bottom p-15 pt-10">
+                <h5><a href="#">Regional health clusters </a></h5>
+                <p>Regional health clusters main focus under the initiative is to provide...</p>
+                <!-- <ul class="list-inline clearfix mt-20">
+                  <li class="pull-left pr-0">Raised: $1890</li>
+                  <li class="text-theme-colored pull-right pr-0">Goal: $2500</li>
+                </ul> -->
+                <div class="mt-10">
+                 <a class="btn btn-dark btn-theme-colored btn-flat btn-sm pull-left mt-10" href="cause-healthClusters.html">Read More</a>
+                 <!-- <div class="pull-right mt-15"><i class="fa fa-heart-o text-theme-colored"></i> 89 Donors</div> -->
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+            <div class="causes bg-lighter box-hover-effect effect1 maxwidth500 mb-sm-30">
+              <div class="thumb">
+                <img class="img-fullwidth" alt="" src="images/0/lead.jpg" style="height: auto; width: 100%;">
+              </div>
+              <div class="progress-item mt-0">
+                <!--<div class="progress mb-0">
+                  <div class="progress-bar" data-percent="84"></div>
+                </div>-->
+              </div>
+              <div class="causes-details clearfix border-bottom p-15 pt-10">
+                <h5><a href="#">Leadership</a></h5>
+                <p>Leadership has remained the greatest cause of conflicts on the continent in the end giving birth to poor...</p>
+                <!-- <ul class="list-inline clearfix mt-20">
+                  <li class="pull-left pr-0">Raised: $1890</li>
+                  <li class="text-theme-colored pull-right pr-0">Goal: $2500</li>
+                </ul> -->
+                <div class="mt-10">
+                 <a class="btn btn-dark btn-theme-colored btn-flat btn-sm pull-left mt-10" href="cause-leadership.html">Read More</a>
+                 <!-- <div class="pull-right mt-15"><i class="fa fa-heart-o text-theme-colored"></i> 89 Donors</div> -->
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+            <div class="causes bg-lighter box-hover-effect effect1 maxwidth500 mb-sm-30">
+              <div class="thumb">
+                <img class="img-fullwidth" alt="" src="images/0/trad.jpg">
+              </div>
+              <div class="progress-item mt-0">
+                <!--<div class="progress mb-0">
+                  <div class="progress-bar" data-percent="84"></div>
+                </div>-->
+              </div>
+              <div class="causes-details clearfix border-bottom p-15 pt-10">
                 <h5><a href="#">Cultural and traditional</a></h5>
                 <p>African culture have been lost in the wake of modernization, culture and tradition has been neglected...</p>
                 <!-- <ul class="list-inline clearfix mt-20">
@@ -734,8 +734,8 @@
                   <li class="text-theme-colored pull-right pr-0">Goal: $2500</li>
                 </ul> -->
                 <div class="mt-10">
-                 <a class="btn btn-dark btn-theme-colored btn-flat btn-sm pull-left mt-10" href="#">Read More</a>
-                 <div class="pull-right mt-15"><i class="fa fa-heart-o text-theme-colored"></i> 89 Donors</div>
+                 <a class="btn btn-dark btn-theme-colored btn-flat btn-sm pull-left mt-10" href="cause-culturalTraditional.html">Read More</a>
+                 <!-- <div class="pull-right mt-15"><i class="fa fa-heart-o text-theme-colored"></i> 89 Donors</div> -->
                 </div>
               </div>
             </div>
@@ -781,7 +781,7 @@
                     <h5 class="text-uppercase"><a href="#" class="text-theme-colored">Regional Health Clusters</a></h5>
                     <p>Provision of care bundles and mental support to the elderly in the Village. We have made sure to avail health support in hard to reach places, provided social support and conducted training on NDCs (Non Communicable diseases)</p>
                      <div class="donate-details">
-                       <a class="btn btn-dark btn-theme-colored btn-flat btn-sm pull-left mt-10" href="#">Donate</a>
+                       <a class="btn btn-dark btn-theme-colored btn-flat btn-sm pull-left mt-10" href="cause-healthClusters.html">Read More</a>
                        <!-- <ul class="pull-right list-inline mt-15">
                          <li>Raised: $1890</li>
                          <li>Goal: $2500</li>
@@ -801,7 +801,7 @@
               </div>
               <p class="mb-10 mt-15">Become part of the revolution to change the mindset of Africans and foster growth in the economy by supporting our initiative. We are a youth driven organisation with the drive towards a better African Future economically, mentally and spiritually</p>
               <p>
-                <a href="#" class="btn btn-dark btn-theme-colored btn-flat btn-sm pull-left mt-10">Join Us</a>
+                <a href="join-us.html" class="btn btn-dark btn-theme-colored btn-flat btn-sm pull-left mt-10">Join Us</a>
                 <span class="pull-right ml-10 mt-12 font-14">volunteers</span>
                 <span class="animate-number pull-right font-20 text-theme-colored lineheight-20 mt-5" data-value="250" data-animation-duration="2500">0</span>
               </p>
