--- a/about.html
+++ b/about.html
@@ -193,16 +193,21 @@
                   <img src="images/0/stategymeeting/IMG_20200730_123258_1.jpg" alt="">
                 </div>
               </div>
-              <!-- <div class="item">
+              <div class="item">
                 <div class="thumb">
-                  <img src="images/blur_bg.jpg" alt="">
+                  <img src="images/0/stategymeeting/IMG_20200810_122933 .min.jpg" alt="">
                 </div>
               </div>
               <div class="item">
                 <div class="thumb">
-                  <img src="images/blur_bg.jpg" alt="">
+                  <img src="images/0/stategymeeting/IMG_20200810_122956 .min.jpg" alt="">
                 </div>
-              </div> -->
+              </div>
+              <div class="item">
+                <div class="thumb">
+                  <img src="images/0/stategymeeting/IMG_20200810_123005 .min.jpg" alt="">
+                </div>
+              </div>
             </div>
           </div>
         </div>
@@ -249,19 +254,19 @@
                 <div class="title-icon">
                   <i class="flaticon-charity-hand-holding-a-heart"></i>
                 </div>
-                <p>Meet our team of yound and dedicated superstars</p>
+                <p class="text-capitalize">Meet our team of young and dedicated superstars</p>
               </div>
             </div>
           </div>
           <div class="section-content">
             <div class="row multi-row-clearfix">
-              <div class="col-sm-6 col-md-3 mb-sm-60 text-left sm-text-center">
+              <div class="col-md-6 col-lg-6 mb-sm-60 text-center">
                 <div class="volunteer border bg-white-fa maxwidth400 p-30">
-                  <div class="thumb"><img alt="" src="images/steven.jpg" class="img-fullwidth"></div>
+                  <div class="thumb"><img alt="" src="images/steven.jpg" class="img-fullwidth img-circle img-circle" style="height: 200px !important; width: auto;"></div>
                   <div class="info">
-                    <h4 class="name"><a href="#">Steven Ruhuma</a></h4>
+                    <h4 class="name"><a href="#">Stephen Ruhuma</a></h4>
                     <h6 class="occupation">Co-Founder/Directpr</h6>
-                    <p>My commitment to truth, unity and love of the diversified cultures on my continent with a strong desire to see the African continent as the leading economy .</p>
+                    <p>My commitment to truth, unity and love of the diversified cultures on my continent with a strong desire to see the African continent as the leading economy with the most vulnerable person benefiting from his ancestral land and the sky not being the limit but the view for our children, the elders drives me to be the initiator with a vision of having new mindsets as Africans to build our continent. </p>
                     <hr>
                     <ul class="styled-icons icon-sm icon-dark icon-theme-colored mt-10 mb-0">
                       <li><a href="#"><i class="fa fa-facebook"></i></a></li>
@@ -271,12 +276,60 @@
                   </div>
                 </div>
               </div>
-              <div class="col-sm-6 col-md-3 mb-sm-60 text-left sm-text-center">
+              <div class="col-md-6 col-lg-6 mb-60 text-center">
                 <div class="volunteer border bg-white-fa maxwidth400 p-30">
-                  <div class="thumb"><img alt="" src="images/0/members/samuel.jpg" class="img-fullwidth" style="height: 200px !important; object-fit: cover;"></div>
+                  <div class="thumb"><img alt="" src="images/0/members/samuel.jpg" class="img-fullwidth img-circle" style="height: 200px !important; width : 200px;  object-fit: cover;"></div>
                   <div class="info">
                     <h4 class="name"><a href="#">Mwijukye Samuel</a></h4>
                     <h6 class="occupation">Co-founder/Head operations and coordination</h6>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eligendi vitae, laboriosam tempora eum voluptatum veritatis cum totam cupiditate, quas ab natus eos non magni at dignissimos officia et id enim amet ex a similique hic libero? Commodi quisquam aut necessitatibus dolor rerum sapiente deleniti id, repellendus, cumque consequuntur hic. Magni vitae amet totam earum laboriosam culpa eaque tempora aliquam iste ullam!</p>
+                    <hr>
+                    <ul class="styled-icons icon-sm icon-dark icon-theme-colored mt-10 mb-0">
+                      <li><a href="#"><i class="fa fa-facebook"></i></a></li>
+                      <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+                      <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
+                    </ul>
+                  </div>
+                </div>
+              </div>
+              <div class="col-md-6 col-lg-6 mb-60 text-center">
+                <div class="volunteer border bg-white-fa maxwidth400 p-30">
+                  <div class="thumb"><img alt="" src="images/0/members/monday-william.png" class="img-fullwidth img-circle" style="height: 200px !important; width:200px; object-fit: cover; "></div>
+                  <div class="info">
+                    <h4 class="name"><a href="#">Monday William</a></h4>
+                    <h6 class="occupation">Co-founder/HR AND ADMIN</h6>
+                    <p>Lack of a growth mindset within African socities has casued a lot of problems within us, therefore with the change I would like to bring to communities of development and solidify unity amongst us africans drives me to the cause of mindset initiative and being an initiator.</p>
+                    <hr>
+                    <ul class="styled-icons icon-sm icon-dark icon-theme-colored mt-10 mb-0">
+                      <li><a href="#"><i class="fa fa-facebook"></i></a></li>
+                      <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+                      <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
+                    </ul>
+                  </div>
+                </div>
+              </div>
+              <div class="col-md-6 col-lg-6 mb-60 text-center">
+                <div class="volunteer border bg-white-fa maxwidth400 p-30">
+                  <div class="thumb"><img alt="" src="images/0/members/melody.png" class="img-fullwidth img-circle" style="height: 200px !important; width:200px; object-fit: cover;"></div>
+                  <div class="info">
+                    <h4 class="name"><a href="#">KAYODI MELODY MERCY</a></h4>
+                    <h6 class="occupation">HEAD STRATEGIC PLANNING</h6>
+                    <p>The communication gap between the elderly and the younger people today has cost development so much in the face of the rapid changing world. In as much as some old African practices were dehumanizing, we must agree that there’s a lot of practices that are still very important and much needed if development is to happen Thou we don’t seem to have concrete information if we come together and share what is common, harmonize it with the current development needs then the question of LIFESTYLE DISEASES, poverty, CLIMATE DESTRUCTION will all be history, this alone drives me to be the initiator of a new Africa.</p>
+                    <hr>
+                    <ul class="styled-icons icon-sm icon-dark icon-theme-colored mt-10 mb-0">
+                      <li><a href="#"><i class="fa fa-facebook"></i></a></li>
+                      <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+                      <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
+                    </ul>
+                  </div>
+                </div>
+              </div>
+              <div class="col-md-6 col-lg-6 mb-60 text-center">
+                <div class="volunteer border bg-white-fa maxwidth400 p-30">
+                  <div class="thumb"><img alt="" src="images/0/members/maiso.jpg" class="img-fullwidth img-circle" style="height: 200px !important; width : 200px;  object-fit: cover;"></div>
+                  <div class="info">
+                    <h4 class="name"><a href="#">MAISO CHRISTOPHER</a></h4>
+                    <h6 class="occupation">Public Relations</h6>
                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptate quasi praesentium corporis possimus quibusdam nemo placeat qui fugiat</p>
                     <hr>
                     <ul class="styled-icons icon-sm icon-dark icon-theme-colored mt-10 mb-0">
@@ -287,13 +340,13 @@
                   </div>
                 </div>
               </div>
-              <div class="col-sm-6 col-md-3 mb-sm-60 text-left sm-text-center">
+              <div class="col-md-6 col-lg-6 mb-sm-60 text-center">
                 <div class="volunteer border bg-white-fa maxwidth400 p-30">
-                  <div class="thumb"><img alt="" src="images/0/members/monday-william.png" class="img-fullwidth" style="height: 200px !important; object-fit: cover;"></div>
+                  <div class="thumb"><img alt="" src="images/0/members/cynth.jpg" class="img-fullwidth img-circle" style="height: 200px !important; width:auto; object-fit: cover;"></div>
                   <div class="info">
-                    <h4 class="name"><a href="#">Monday William</a></h4>
-                    <h6 class="occupation">Co-founder/HR AND ADMIN</h6>
-                    <p>Lack of a growth mindset within African socities has casued a lot of problems within us, therefore with the change I would like to bring to communities of development and solidify unity amongst us africans </p>
+                    <h4 class="name"><a href="#">CYNTHIA KYOFUNA</a></h4>
+                    <h6 class="occupation">Co-founder/Communication and dissemination manager</h6>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium soluta, voluptatem praesentium sapiente doloremque ipsam, magnam exercitationem fugiat neque hic quia illum, perferendis molestiae dolor! Architecto quaerat at distinctio fugiat!</p>
                     <hr>
                     <ul class="styled-icons icon-sm icon-dark icon-theme-colored mt-10 mb-0">
                       <li><a href="#"><i class="fa fa-facebook"></i></a></li>
@@ -303,13 +356,13 @@
                   </div>
                 </div>
               </div>
-              <div class="col-sm-6 col-md-3 mb-60 text-left sm-text-center">
+              <div class="col-md-6 col-lg-6 mb-sm-60 text-center">
                 <div class="volunteer border bg-white-fa maxwidth400 p-30">
-                  <div class="thumb"><img alt="" src="images/0/members/melody.png" class="img-fullwidth" style="height: 200px !important; object-fit: cover;"></div>
+                  <div class="thumb"><img alt="" src="images/0/members/apuuli.jpg" class="img-fullwidth img-circle" style="height: 200px !important; width:200px; object-fit: cover;"></div>
                   <div class="info">
-                    <h4 class="name"><a href="#">KAYODI MELODY MERCY</a></h4>
-                    <h6 class="occupation">HEAD STRATEGIC PLANNING</h6>
-                    <p>The communication gap between the elderly and the younger people today has cost development so much in the face of the rapid changing world</p>
+                    <h4 class="name"><a href="#">KATUUSA BRIAN APUULi</a></h4>
+                    <h6 class="occupation">CO-FOUNDER/Programs-project manager</h6>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos rerum voluptatum sint doloremque, velit nesciunt corrupti saepe quasi ullam, temporibus perferendis quos, quae impedit. Necessitatibus ullam blanditiis distinctio, magni obcaecati eum nobis optio, culpa voluptates reiciendis id corporis minima delectus ex. Ea blanditiis, modi nisi illo repellat earum reprehenderit et?</p>
                     <hr>
                     <ul class="styled-icons icon-sm icon-dark icon-theme-colored mt-10 mb-0">
                       <li><a href="#"><i class="fa fa-facebook"></i></a></li>
@@ -319,13 +372,13 @@
                   </div>
                 </div>
               </div>
-              <div class="col-sm-6 col-md-3 mb-sm-60 text-left sm-text-center">
+              <div class="col-md-6 col-lg-6 mb-sm-60 text-center">
                 <div class="volunteer border bg-white-fa maxwidth400 p-30">
-                  <div class="thumb"><img alt="" src="images/0/members/ayebare.png" class="img-fullwidth" style="height: 200px !important; object-fit: cover;"></div>
+                  <div class="thumb"><img alt="" src="images/0/members/ayebare.png" class="img-fullwidth img-circle" style="height: 200px !important; width:200px; object-fit: cover;"></div>
                   <div class="info">
                     <h4 class="name"><a href="#">Ayebale Walter</a></h4>
-                    <h6 class="occupation">Secondary Schools Cordinator</h6>
-                    <p>We joined the cause of mindset initiative to develop our talents and use them to build our new Africa we would like to leave in basing on our talents.</p>
+                    <h6 class="occupation">SECONDARY SCHOOLS CORDINATOR</h6>
+                    <p>We as the young students in secondary schools we are robbed of our talents with the education system, it has made us to think our natural talents can’t take us anywhere so it is the reason we joined the cause of mindset initiative to develop our talents and use them to build our new Africa we would like to leave in basing on our talents.</p>
                     <hr>
                     <ul class="styled-icons icon-sm icon-dark icon-theme-colored mt-10 mb-0">
                       <li><a href="#"><i class="fa fa-facebook"></i></a></li>
@@ -366,14 +419,14 @@
         <div class="row">
           <div class="col-md-12">
             <div class="clients-logo carousel">
+              <div class="item"> <a href="#"><img src="images/0/logos/African_Union.svg.png" alt=""></a> </div>
+              <div class="item"> <a href="#"><img src="images/0/logos/oau.jpg" alt=""></a> </div>
               <div class="item"> <a href="#"><img src="images/0/logos/download.jpg" alt=""></a> </div>
               <div class="item"> <a href="#"><img src="images/0/logos/unevnt.png" alt=""></a> </div>
               <div class="item"> <a href="#"><img src="images/0/logos/unhcr-the-un-refugee-agency-vector-logo.png" alt=""></a> </div>
               <div class="item"> <a href="#"><img src="images/0/logos/unicef-logo.png" alt=""></a> </div>
               <div class="item"> <a href="#"><img src="images/0/logos/wfp-logo-standard-blue-en.png" alt=""></a> </div>
               <!-- <div class="item"> <a href="#"><img src="" alt=""></a> </div> -->
-              <!-- <div class="item"> <a href="#"><img src="" alt=""></a> </div>
-              <div class="item"> <a href="#"><img src="" alt=""></a> </div> -->
             </div>
           </div>
         </div>
