--- a/how-works.html
+++ b/how-works.html
@@ -168,7 +168,7 @@
               <h2 class="title text-theme-colored mt-0">Mindset Initiative</h2>
               <p class="mb-10">Mindset initiative has developed programs that will be implemented for it to achieve or provide a solution to saving the generational minds, the geographical interest for mindset initiative is the African continent as whole thou with its first point of interest to be Uganda.
                 <br>
-                Mindset initiative programs will be focusing on talent development, education, leadership, wealth and resources, certainty of God’s word, building an e-research institute, and also having regional clusters, these programs will not be running at the same time but one leading to the other respectively
+                Mindset initiative programs focus on talent development, education, leadership, wealth and resources, certainty of God’s word, building an e-research institute, and also having regional clusters.
               </p>
   
               <h4 class="mt-20 mb-5 text-theme-colored">Our Causes</h4>
@@ -280,6 +280,8 @@
           <div class="row">
             <div class="col-md-12">
               <div class="clients-logo carousel">
+                <div class="item"> <a href="#"><img src="images/0/logos/African_Union.svg.png" alt=""></a> </div>
+                <div class="item"> <a href="#"><img src="images/0/logos/oau.jpg" alt=""></a> </div>
                 <div class="item"> <a href="#"><img src="images/0/logos/download.jpg" alt=""></a> </div>
               <div class="item"> <a href="#"><img src="images/0/logos/unevnt.png" alt=""></a> </div>
               <div class="item"> <a href="#"><img src="images/0/logos/unhcr-the-un-refugee-agency-vector-logo.png" alt=""></a> </div>
