--- a/about.html
+++ b/about.html
@@ -265,7 +265,7 @@
                   <div class="thumb"><img alt="" src="images/steven.jpg" class="img-fullwidth img-circle img-circle" style="height: 200px !important; width: auto;"></div>
                   <div class="info">
                     <h4 class="name"><a href="#">Stephen Ruhuma</a></h4>
-                    <h6 class="occupation">Co-Founder/Directpr</h6>
+                    <h6 class="occupation">Co-Founder/Director</h6>
                     <p>My commitment to truth, unity and love of the diversified cultures on my continent with a strong desire to see the African continent as the leading economy with the most vulnerable person benefiting from his ancestral land and the sky not being the limit but the view for our children, the elders drives me to be the initiator with a vision of having new mindsets as Africans to build our continent. </p>
                     <hr>
                     <ul class="styled-icons icon-sm icon-dark icon-theme-colored mt-10 mb-0">
@@ -362,7 +362,7 @@
                   <div class="info">
                     <h4 class="name"><a href="#">KATUUSA BRIAN APUULi</a></h4>
                     <h6 class="occupation">CO-FOUNDER/Programs-project manager</h6>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos rerum voluptatum sint doloremque, velit nesciunt corrupti saepe quasi ullam, temporibus perferendis quos, quae impedit. Necessitatibus ullam blanditiis distinctio, magni obcaecati eum nobis optio, culpa voluptates reiciendis id corporis minima delectus ex. Ea blanditiis, modi nisi illo repellat earum reprehenderit et?</p>
+                    <p>Adding and sounding my voice to Africa that through youth empowerment, skillful education,better leadership,uncompromised health care, God in lead we can change the mindset of people that is rooted on unity, truth and love this drives me to be the initiator of a changed mindset to build anew Africa.</p>
                     <hr>
                     <ul class="styled-icons icon-sm icon-dark icon-theme-colored mt-10 mb-0">
                       <li><a href="#"><i class="fa fa-facebook"></i></a></li>
