--- a/cause-healthClusters.html
+++ b/cause-healthClusters.html
@@ -91,7 +91,7 @@
                 <li class="m-0 pl-10 pr-10"> <i class="fa fa-phone text-theme-colored"></i> <a class="text-gray" href="#">+256 779 784 511</a> 
                 </li>
                 <li class="m-0 pl-10 pr-10"> <i class="fa fa-clock-o text-theme-colored"></i> Mon-Fri 8:00 to 2:00 </li>
-                <li class="m-0 pl-10 pr-10"> <i class="fa fa-envelope-o text-theme-colored"></i> <a class="text-gray" href="#">africamindsetinitiative@gmail.com</a> </li>
+                <li class="m-0 pl-10 pr-10"> <i class="fa fa-envelope-o text-theme-colored"></i> <a class="text-gray" href="#">info@mindsetinitiativeafrica.org</a> </li>
                 <li class="sm-display-block mt-sm-10 mb-sm-10">
                   <a class="btn btn-colored btn-flat btn-theme-colored" href="https://dashboard.flutterwave.com/donate/35j3tmw3syop" >Donate Now</a>
 
@@ -395,7 +395,7 @@
             <h5 class="widget-title line-bottom">Quick Contact</h5>
             <ul class="list-border">
               <li><a href="tel:+256779784511">+256 779 784 511</a></li>
-              <li><a href="#">africamindsetinitiative@gmail.com </a></li>
+              <li><a href="#">info@mindsetinitiativeafrica.org </a></li>
               <li><a href="#" class="lineheight-20">Plot No. 81 Jinja Road</a></li>
             </ul>
             <p class="text-white mb-5 mt-15">Subscribe to our newsletter</p>
