--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
         <ul>
           <li class="font-14 mb-5"> <i class="fa fa-phone text-theme-colored"></i> <a href="#" class="text-gray">+256 779 784 511</a> </li>
           <li class="font-14 mb-5"> <i class="fa fa-clock-o text-theme-colored"></i> Mon-Fri 8:00 to 2:00 </li>
-          <li class="font-14 mb-5"> <i class="fa fa-envelope-o text-theme-colored"></i> <a href="#" class="text-gray">africamindsetinitiative@gmail.com</a> </li>
+          <li class="font-14 mb-5"> <i class="fa fa-envelope-o text-theme-colored"></i> <a href="#" class="text-gray">info@mindsetinitiativeafrica.org</a> </li>
         </ul>      
       </div>
       <div class="widget">
@@ -133,7 +133,7 @@
               <ul class="list-inline pull-right sm-pull-none sm-text-center mt-5">
                 <li class="m-0 pl-10 pr-10"> <i class="fa fa-phone text-theme-colored"></i> <a class="text-gray" href="#">+256 779 784 511</a> </li>
                 <li class="m-0 pl-10 pr-10"> <i class="fa fa-clock-o text-theme-colored"></i> Mon-Fri 8:00 to 2:00 </li>
-                <li class="m-0 pl-10 pr-10"> <i class="fa fa-envelope-o text-theme-colored"></i> <a class="text-gray" href="#">africamindsetinitiative@gmail.com</a> </li>
+                <li class="m-0 pl-10 pr-10"> <i class="fa fa-envelope-o text-theme-colored"></i> <a class="text-gray" href="#">info@mindsetinitiativeafrica.org</a> </li>
                 <li class="sm-display-block mt-sm-10 mb-sm-10">
                   <a class="btn btn-colored btn-flat btn-theme-colored" href="https://dashboard.flutterwave.com/donate/35j3tmw3syop" >Donate Now</a>
 
@@ -1251,7 +1251,7 @@
             <h5 class="widget-title line-bottom">Quick Contact</h5>
             <ul class="list-border">
               <li><a href="#">+256 779 784 511</a></li>
-              <li><a href="#">africamindsetinitiative@gmail.com </a></li>
+              <li><a href="#">info@mindsetinitiativeafrica.org </a></li>
               <li><a href="#" class="lineheight-20">Plot No. 81 Jinja Road</a></li>
             </ul>
             <p class="text-white mb-5 mt-15">Subscribe to our newsletter</p>
