--- a/index.html
+++ b/index.html
@@ -121,10 +121,10 @@
           <div class="col-md-3">
             <div class="widget no-border m-0">
               <ul class="styled-icons icon-sm sm-text-center">
-                <li><a href="#"><i class="fa fa-facebook"></i></a></li>
+                <li><a href="https://www.facebook.com/mindsetinitiativeafric"><i class="fa fa-facebook"></i></a></li>
                 <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
-                <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+                <li><a href="https://www.instagram.com/mindsetinitiativeafrica/"><i class="fa fa-instagram"></i></a></li>
+                <li><a href="https://www.linkedin.com/company/mindsetinitiativeafrica"><i class="fa fa-linkedin"></i></a></li>
               </ul>
             </div>
           </div>
@@ -266,7 +266,7 @@
                   data-splitin="none" 
                   data-splitout="none" 
                   data-responsive_offset="on"
-                  style="z-index: 5; white-space: nowrap; letter-spacing:0px; font-weight:400;">Join our struggle to bring health social and mental outreach <br> to thousands of people in Uganda..
+                  style="z-index: 5; white-space: nowrap; letter-spacing:0px; font-weight:400;">Join our struggle to bring health, social and mental outreach <br> to thousands of people in Uganda..
                 </div>
 
                 <!-- LAYER NR. 4 -->
@@ -472,7 +472,7 @@
                   data-splitin="none" 
                   data-splitout="none" 
                   data-responsive_offset="on"
-                  style="z-index: 5; white-space: nowrap; letter-spacing:0px; font-weight:400;">We try our best to secure a education<br>  for the children.
+                  style="z-index: 5; white-space: nowrap; letter-spacing:0px; font-weight:400;">We do our best to secure education<br>  for the children.
                 </div>
 
                 <!-- LAYER NR. 4 -->
@@ -1212,10 +1212,10 @@
             <p class="font-12 mt-10 mb-10">Mindset initiative is to have a common positive ideology as Africans towards Africa to the solutions of saving our generational minds and create a renewed Africa.</p>
             <!-- <a class="btn btn-default btn-transparent btn-xs btn-flat mt-5" href="#">Read more</a> -->
             <ul class="styled-icons icon-sm icon-bordered icon-circled clearfix mt-20">
-              <li><a href="#"><i class="fa fa-facebook"></i></a></li>
+              <li><a href="https://www.facebook.com/mindsetinitiativeafric"><i class="fa fa-facebook"></i></a></li>
               <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-              <li><a href="#"><i class="fa fa-instagram"></i></a></li>
-              <li><a href="#"><i class="fa fa-fa fa-linkedin"></i></a></li>
+              <li><a href="https://www.instagram.com/mindsetinitiativeafrica"><i class="fa fa-instagram"></i></a></li>
+              <li><a href="https://www.linkedin.com/company/mindsetinitiativeafrica"><i class="fa fa-fa fa-linkedin"></i></a></li>
               <!-- <li><a href="#"><i class="fa fa-behance"></i></a></li> -->
             </ul>
           </div>
@@ -1291,7 +1291,7 @@
     <div class="container-fluid bg-theme-colored p-20">
       <div class="row text-center">
         <div class="col-md-12">
-          <p class="text-white font-11 m-0">Copyright &copy;2020 Mindset Initiative Africa. All Rights Reserved</p>
+          <p class="text-white font-11 m-0">Copyright &copy;2021 Mindset Initiative Africa. All Rights Reserved</p>
         </div>
       </div>
     </div>
